<resources>
    <string name="app_name">Ilmanaque - Apoio à Agricultura</string>
    <string name="title_activity_teste">Teste</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nome_planta">Nome da Atividade </string>
    <string name="terreno">Terreno</string>
    <string name="quantidade">Quantidade</string>
    <string name="data">ano/mes/dia</string>
    <string name="registar">Registar</string>
    <string name="atividades">Atividades</string>
    <string name="meteorologia">Meteorologia</string>
    <string name="selecionar_atividade_a_editar">Selecionar atividade</string>
    <string name="adicionar">Adicionar</string>
    <string name="definir_lembrete">Definir Lembrete</string>
    <string name="descricao">descricao</string>
    <string name="ano_mes_dia">ano/mes/dia</string>
    <string name="autom_tico">Automático</string>
    <string name="manual">Manual</string>
    <string name="editar">Editar</string>
    <string name="lembretes">Lembretes</string>
    <string name="calendario">Calendário</string>
    <string name="novo_lembrete">Novo Lembrete</string>
    <string name="textview">TextView</string>


</resources>
