<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_dialog"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/definir_lembrete"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/et_inputdescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descricao"
        />


    <EditText
        android:id="@+id/et_inputdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ano_mes_dia"
        >


    </EditText>
</LinearLayout>